<resources>
    <string name="app_name">Training Timer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cancel"> Cancel </string>
    <string name="accept"> Accept </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="steps_label">Steps: 10</string>
    <string name="work_label">Work: 45 seconds</string>
    <string name="rest_label">Rest: 45 seconds</string>
    <string name="start">start</string>
    <string name="finish">finish</string>
    <string name="steps_to_finishlabel">0 Steps to finish</string>

    <!-- Strings in save exercise dialog-->
    <string name="title_save_exercise_dialog"> Save work out </string>
    <string name="msg_save_exercise_dialog"> The following work out will be saved to be used after. Add an exercise name and press the accept button. </string>
    <string name="exercise_name"> Exercise name </string>
    <string name="toast_exercise_name_empty"> Please add an exercise name. </string>

    <!-- Strings in view exercise summary-->
    <string name="steps"> Steps </string>
    <string name="work_out"> Work out </string>
    <string name="rest"> Rest </string>
    <string name="seconds_unit"> (s) </string>

    <!-- Strings in load exercise dialog-->
    <string name="title_load_exercise_dialog"> Load exercise </string>
    <string name="exercises_not_found"> There is not any exercise saved. </string>



</resources>