<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_steps_label"
        style="@style/muli20bold"
        android:textColor="@color/primary_ligth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_work_out_label"
        style="@style/muli20bold"
        android:textColor="@color/primary_ligth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/work_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_rest_label"
        style="@style/muli20bold"
        android:textColor="@color/primary_ligth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_steps"
        style="@style/muli20bold"
        android:layout_marginTop="12dp"
        android:textColor="@color/primary_ligth"
        app:layout_constraintTop_toBottomOf="@id/tv_steps_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="0 (s)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_work_out"
        style="@style/muli20bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="0 (s)"
        android:textColor="@color/primary_ligth"
        app:layout_constraintEnd_toEndOf="@+id/tv_work_out_label"
        app:layout_constraintStart_toStartOf="@+id/tv_work_out_label"
        app:layout_constraintTop_toBottomOf="@id/tv_work_out_label" />

    <TextView
        android:id="@+id/tv_rest"
        style="@style/muli20bold"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 (s)"
        android:textColor="@color/primary_ligth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_work_out_label" />


    <View
        android:id="@+id/separator"
        android:background="@color/primary_ligth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_work_out"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>